--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://localhost:27017/netflix_clone?ssl=false&connectTimeoutMS=5000&replicaSet=rs0"
+# DATABASE_URL="mongodb://localhost:27017/netflix_clone?ssl=false&connectTimeoutMS=5000&replicaSet=rs0" -> Local
+DATABASE_URL="mongodb+srv://anangmaruf18211:Asdasd9i8u@netflixclone.jldvv2e.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
 
